--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.App {
-    text-align: center;
-}
-
 .add_new::placeholder {
     color: rgba(245, 122, 0, 0.6);
 }
@@ -14,22 +10,14 @@
     box-shadow: 0 0 0 0 rgba(235, 104, 100, 0.25);
 }
 
-.debug {
-    border: 10px solid black;
-}
-
-.debug2 {
-    border: 10px solid blue;
-}
-
-.debug3 {
-    border: 10px solid green;
-}
-
 .mt-footer {
     margin-top: 1.75% !important;
 }
 
 .mb-navbar {
     margin-bottom: 1.25% !important;
+}
+
+.nav-link a {
+    font-size: ;
 }
