cleaned up code, added bootstrap js, made mobile navbars, fixed smooth scrol, removed shareing system, and add prototype list texting system

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,8 @@
     margin-bottom: 1.25% !important;
 }
 
-.nav-link a {
-    font-size: ;
+.scroll-top {
+    position: fixed !important;
+    right: 3% !important;
+    bottom: 3% !important;
 }
