added sending lists, tab icons, tab titles, enter button, autofocus phone number input, and more

--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,12 @@
     bottom: 3% !important;
     z-index: 1000 !important;
 }
+
+.dropdown-menu {
+    overflow-y: auto !important;
+    max-height: 50vh !important;
+}
+
+.debug {
+    border: 5px solid black;
+}
